# savesmith

./: .gitignore  LICENSE  README.md  meson.build  pyproject.toml
content/: manifest.json  manifest.json.sig
content/definitions/: balatro-trainer.json  big-ambitions.json  dave-the-diver-trainer.json  dave-the-diver.json  ftl-trainer.json
content/plugins/: code_cave.py  format_gzip.py  format_xor_gamedata.py  lua_inject.py  memory_pointer_chain.py  memory_static.py  search_json.py  search_utf16le.py
data/: io.github.savesmith.desktop  io.github.savesmith.gschema.xml  io.github.savesmith.metainfo.xml  meson.build
flatpak/: io.github.savesmith.json
savesmith/: __init__.py  main.py  meson.build  window.py
savesmith/core/: definition.py  downloader.py  editor.py  memory.py  meson.build  plugin_loader.py  process.py  save_file.py  signing.py  trainer.py
savesmith/views/: game_browser.py  meson.build  process_picker.py  save_browser.py  save_editor.py  trainer_editor.py
tools/: generate_keys.py  sign_manifest.py
