[project]
name = "savesmith"
version = "0.1.0"
description = "A modular save game editor for Linux"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
dependencies = [
    "PyGObject",
    "cryptography",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B"]
ignore = ["E402"]  # GTK apps must call gi.require_version before imports

[tool.ruff.lint.per-file-ignores]
"tools/*" = ["S"]  # Dev tools don't need security hardening

[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"
