[project]
name = "savesmith"
version = "0.1.0"
description = "A modular save game editor for Linux"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
dependencies = [
    "PyGObject",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B"]
ignore = ["E402"]  # GTK apps must call gi.require_version before imports

[tool.ruff.lint.per-file-ignores]
"savesmith/core/process.py" = ["S603", "S607"]  # flatpak-spawn host portal
"savesmith/core/memory.py" = ["S603", "S607"]  # flatpak-spawn host helper
"content/plugins/lua_inject.py" = ["S603", "S607"]  # GDB + flatpak-spawn

[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"
