install_data(
  'io.github.savesmith.desktop',
  install_dir: get_option('datadir') / 'applications',
)

install_data(
  'io.github.savesmith.metainfo.xml',
  install_dir: get_option('datadir') / 'metainfo',
)

install_data(
  'io.github.savesmith.gschema.xml',
  install_dir: get_option('datadir') / 'glib-2.0' / 'schemas',
)

install_data(
  'io.github.savesmith.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
)
